Started to add the real content

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: default
-title: Hello, world!
+title: Воскресенское кладбище города Саратова
 ---
-<h1>{{ "Hello, world!" | downcase }}</h1>
+<h1>Воскресенское кладбище города Саратова</h1>
